--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apollo-server-express": "^3.6.7",
     "bcrypt": "^5.0.1",
+    "concurrently": "^7.1.0",
     "express": "^4.18.1",
     "faker": "^6.6.6",
     "graphql": "^16.4.0",
